@@ -19,7 +19,9 @@
 
 package org.apache.fop.fonts;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -33,11 +35,9 @@ import org.apache.fop.util.CharUtilities;
  */
 public class SimpleSingleByteEncoding implements SingleByteEncoding {
 
-    private String name;
-    private List mapping = new java.util.ArrayList();
-    //List<NamedCharacter>
-    private Map charMap = new java.util.HashMap();
-    //Map<Character(Unicode), Character(code point)>
+    private final String name;
+    private final List<NamedCharacter> mapping = new ArrayList<NamedCharacter>();
+    private final Map<Character, Character> charMap = new HashMap<Character, Character>();
 
     /**
      * Main constructor.
@@ -54,7 +54,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
 
     /** {@inheritDoc} */
     public char mapChar(char c) {
-        Character nc = (Character)charMap.get(new Character(c));
+        Character nc = charMap.get(Character.valueOf(c));
         if (nc != null) {
             return nc.charValue();
         }
@@ -66,7 +66,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
         String[] map = new String[getSize()];
         Arrays.fill(map, Glyphs.NOTDEF);
         for (int i = getFirstChar(); i <= getLastChar(); i++) {
-            NamedCharacter ch = (NamedCharacter)this.mapping.get(i - 1);
+            NamedCharacter ch = this.mapping.get(i - 1);
             map[i] = ch.getName();
         }
         return map;
@@ -119,7 +119,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
         }
         char newSlot = (char)(getLastChar() + 1);
         this.mapping.add(ch);
-        this.charMap.put(new Character(ch.getSingleUnicodeValue()), new Character(newSlot));
+        this.charMap.put(Character.valueOf(ch.getSingleUnicodeValue()), Character.valueOf(newSlot));
         return newSlot;
     }
 
@@ -133,7 +133,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
             throw new IllegalArgumentException("codePoint must be between 0 and 255");
         }
         if (codePoint <= getLastChar()) {
-            return (NamedCharacter)this.mapping.get(codePoint - 1);
+            return this.mapping.get(codePoint - 1);
         } else {
             return null;
         }
@@ -152,6 +152,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
     }
 
     /** {@inheritDoc} */
+    @Override
     public String toString() {
         return getName() + " (" + getSize() + " chars)";
     }
